fix: gif on iphones

--- a/components/MobileLanding/MobileLanding/mobileLanding.module.scss
+++ b/components/MobileLanding/MobileLanding/mobileLanding.module.scss
@@ -24,8 +24,8 @@
       position: relative;
 
       .slotMachine {
-        height: 100%;
-        width: auto;
+        height: 100% !important;
+        width: auto !important;
         z-index: 1;
       }
     }
