--- a/components/PreloaderProMax/prepreloader.module.scss
+++ b/components/PreloaderProMax/prepreloader.module.scss
@@ -17,8 +17,4 @@
       height: 125%;
     }
   }
-
-  img {
-    height: 125%;
-  }
 }
